tests/miniJava/neg/006438_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while public ( 0 ) { } } }
